// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`move-document-to-recycle-bin should handle moving a non-existent document 1`] = `
{
  "content": [
    {
      "text": "Error: AxiosError: Request failed with status code 404",
      "type": "text",
    },
  ],
}
`;

exports[`move-document-to-recycle-bin should move a document to the recycle bin 1`] = `
{
  "content": [
    {
      "text": """",
      "type": "text",
    },
  ],
}
`;
